# AtomSculptor

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yaml  install.sh  main.py  pyproject.toml  settings.py
agent_team/: adk_compat.py  agent.py
agent_team/agents/: aggregator.py  atom_sculptor.py  mp_searcher.py  planner.py  structure_builder.py
agent_team/memories/instructions/: surface_creation.md  surface_defect_creation.md
agent_team/memories/notes/: note_05b40de3-5e8f-4012-8afb-73e65ebe436e.md  note_79538cc3-91c5-4b88-a53d-0b2a46a90daf.md  note_fcd46d76-e963-4cfa-b7ac-ad8bed320d9b.md
agent_team/notes/memories/: note_6eac12e9-972d-4865-9d90-b9801225d9a1.md  note_d6737ac5-0ca7-4ff5-aace-44d37c7f9a1d.md  note_e162e215-c24e-4837-bb8e-4dbf26124e84.md
agent_team/notes/task_instructions/: task_categories.md
agent_team/planning/: task.py
agent_team/toolbox/structure_modelling/: crystal_builder.py  doc.md  structure_perturbation.py  structure_tools.py
agent_team/tools/: code_graph_tools.py  ddgs_search_tools.py  memory_tools.py  planning_tools.py  state_management_tools.py  structure_tools.py
code_graph_rag/: CODE_GRAPH_INTEGRATION.md
code_graph_rag/codebase_rag/: config.py  graph_updater.py  parser_loader.py  prompts.py  tool_api.py
code_graph_rag/codebase_rag/services/: graph_service.py  llm.py
code_graph_rag/codebase_rag/tools/: code_retrieval.py  codebase_query.py  directory_lister.py  document_analyzer.py
sandbox/: core.py  tools.py
web_gui/: agent_session.py  file_watcher.py  filesystem.py  helpers.py  routes.py  server.py  structure.py  todo.py  websocket_handler.py
web_gui/static/: index.html  jsconfig.json  package.json
web_gui/static/css/: index.css
web_gui/static/js/: add-panel.js  app.js  chat.js  editor.js  filesystem.js  gizmo.js  interface-panel.js  lattice-panel.js  layers.js  panels.js  state.js  structure.js  todo.js  utils.js  viewer.js  websocket.js
